Added project information

--- a/index.html
+++ b/index.html
@@ -85,31 +85,31 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Projects</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0"><a href="https://britneyart80.github.io/Dollary/">Dollary</a></h3>
+            <div class="subheading mb-3">Full-stack budgeting app</div>
+            <p>A full-stack budgeting application complete with my own back-end API and front-end UX/UI. Create an account, make envelopes for each month, set your budget and start keeping track of your spendings! Web app is mobile friendly as well.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">July 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0"><a href="https://britneyart80.github.io/Tic-tac-toe-client/">Tic Tac Toe</a></h3>
+            <div class="subheading mb-3">Free game online</div>
+            <p>An interactive game of Tic Tac Toe built using a third-party API and my own front-end. Create your account and play Tic Tac Toe with a computer AI or multiplayer with a friend. Game environment themes included so you can tailor how your game looks!</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">June 2019</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Junior Web Designer</h3>
             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -129,7 +129,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2008 - June 2010</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
