--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </div>
         <p class="lead mb-5">elevator-pitch goes here!</p>
         <div class="social-icons">
-          <a href="https://linkedin.com/in/britney-chen-08/">
+          <a href="https://linkedin.com/in/britney-chen-08/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/britneyart80?tab=repositories">
+          <a href="https://github.com/britneyart80?tab=repositories" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -91,7 +91,8 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://britneyart80.github.io/Dollary/">Dollary</a></h3>
             <div class="subheading mb-3">Full-stack budgeting app</div>
-            <p>A full-stack budgeting application complete with my own back-end API and front-end UX/UI. Create an account, make envelopes for each month, set your budget and start keeping track of your spendings! Web app is mobile friendly as well.</p>
+            <p>A full-stack budgeting application complete with my own back-end API and front-end UX/UI. Create an account, make envelopes for each month, set your budget and start keeping track of your spendings! Web app is mobile friendly as well.
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2019</span>
@@ -102,7 +103,8 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://britneyart80.github.io/Tic-tac-toe-client/">Tic Tac Toe</a></h3>
             <div class="subheading mb-3">Free game online</div>
-            <p>An interactive game of Tic Tac Toe built using a third-party API and my own front-end. Create your account and play Tic Tac Toe with a computer AI or multiplayer with a friend. Game environment themes included so you can tailor how your game looks!</p>
+            <p>An interactive game of Tic Tac Toe built using a third-party API and my own front-end. Create your account and play Tic Tac Toe with a computer AI or multiplayer with a friend. Game environment themes included so you can tailor how
+              your game looks!</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2019</span>
@@ -133,38 +135,6 @@
 
       </div>
 
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-      <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -233,11 +203,44 @@
 
     <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2006 - May 2010</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">James Buchanan High School</h3>
+            <div class="subheading mb-3">Technology Magnet Program</div>
+            <p>GPA: 3.56</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2002 - May 2006</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end
+          web development world.</p>
       </div>
     </section>
 
