--- a/index.html
+++ b/index.html
@@ -93,17 +93,18 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                      <p><span class="title-s">Name: </span> <span>Britney Chen</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
+                      <p><span class="title-s">Email: </span> <span><a href="mailto: chen.bri@husky.neu.edu">chen.bri@husky.neu.edu</a></span></p>
+                      <p><span class="title-s">Phone: </span> <span>(909) 509-1668</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <p class="title-s">Skills</p>
+                  <span class="pull-right">85%</span>
                   <div class="progress">
+                    <img src="img/HTML.png" class="img-fluid rounded b-shadow-a" alt="">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
@@ -157,7 +158,7 @@
   </section>
 
   <!--/ Section Services Star /-->
-  <section id="service" class="services-mf route">
+  <section id="skills" class="services-mf route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -321,7 +322,7 @@
   </div>
 
   <!--/ Section Portfolio Star /-->
-  <section id="work" class="portfolio-mf sect-pt4 route">
+  <section id="projects" class="portfolio-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
