--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  <span class="pull-right">85%</span>
-                  <img src="img/HTML.png" class="img-fluid rounded b-shadow-a" alt="">
+                  <span class="pull-right">65%</span>
+                  <img src="img/HTML.png" class="img-fluid rounded b-shadow-a" alt="" style="height:60px">
+                  <img src="img/CSS.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height:60px">
+                  <img src="img/SASS.svg" class="img-fluid rounded b-shadow-a" alt="" style="height:60px">
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
