Added skills icons
- Added icons for ruby on rails, java and javascript

--- a/index.html
+++ b/index.html
@@ -102,27 +102,26 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  <span class="pull-right">65%</span>
                   <img src="img/HTML.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/CSS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/SASS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <img src="img/RUBYONRAILS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <img src="img/JAVA.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <img src="img/JS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
