--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <img src="img/RUBYONRAILS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <img src="img/RUBYONRAILS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
