--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <img src="img/JS-Logo.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <img src="img/JS-Logo.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/NODE.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
