--- a/index.html
+++ b/index.html
@@ -101,7 +101,22 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skills</p>
+                  <p class="title-s">Language Skills</p>
+                  <img src="img/JS-Logo.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                  </div>
+                  <img src="img/JAVA.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                  </div>
+                  <img src="img/RUBY.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                  </div>
                   <img src="img/HTML.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/CSS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/SASS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
@@ -109,22 +124,10 @@
                     <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <img src="img/RUBYONRAILS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                  <img src="img/JAVA.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
-                  <img src="img/JS-Logo.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <p> Other Skills </p>
+                  <img src="img/MONGODB.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <img src="img/RUBYONRAILS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/NODE.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
                 </div>
               </div>
               <div class="col-md-6">
