Added profile picture in about

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/PROFILE.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -101,7 +101,9 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Language Skills</p>
+                  <p class="title-s">Technical Skills</p>
+                  <span></span>
+                  <p> Languages </p>
                   <img src="img/JS-Logo.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
@@ -124,7 +126,7 @@
                     <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <p> Other Skills </p>
+                  <p> Other </p>
                   <img src="img/MONGODB.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/RUBYONRAILS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/NODE.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
