Added Profile picture

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/PROFILE.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/PROFILE.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -128,7 +128,7 @@
                   </div>
                   <p> Other </p>
                   <img src="img/MONGODB.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
-                  <img src="img/RUBYONRAILS.jpg" class="img-fluid rounded b-shadow-a skill-icon" alt="">
+                  <img src="img/RUBYONRAILS.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                   <img src="img/NODE.png" class="img-fluid rounded b-shadow-a skill-icon" alt="">
                 </div>
               </div>
