--- a/index.html
+++ b/index.html
@@ -12,6 +12,70 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <div class="container wrapper col-12">
+        <!-- nav bar -->
+        <div class="row nav-bar">
+          <nav>
+            <a href="#about" class="toscroll">About</a>
+            <a href="#skills"
+            class="toscroll">Skills</a>
+            <a href="#projects" class="toscroll">Projects</a>
+            <a href="#contact" class="toscroll">Contact</a>
+          </nav>
+        </div>
+
+        <!-- header section -->
+        <header class="row align-items-center">
+          <h1> Britney Chen </h1>
+          <div class="typewriter">
+          <h2> BS Computer Science and Design, Software Engineer </h2>
+        </header>
+
+        <!-- All page content-->
+        <div class="content">
+          <div id="back-to-top">
+            <i class="arrow up"></i>
+          </div>
+          <!-- section for about -->
+          <section class="row" id="about">
+            <h2> About Me </h2>
+            <div class="profile-pic">
+              <img src="assets/img/profile.jpg">
+            </div>
+            <p>
+              "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+            </p>
+          </section>
+
+          <!-- section for skills -->
+          <section class="row" id="skills">
+            <h2> Skills </h2>
+            <div class="languages">
+              <h3> Languages </h3>
+            </div>
+            <div class="frameworks">
+              <h3> Frameworks and Technologies </h3>
+            </div>
+          </section>
+
+          <!-- section for projects -->
+          <section class="row" id="projects">
+            <h2> Projects </h2>
+
+            <div class="dollary">
+            </div>
+
+            <div class="tictactoe">
+            </div>
+          </section>
+
+          <!-- section for contact -->
+          <section class="row" id="contact">
+            <h2> Hire Me! </h2>
+          </section>
+
+        </div>
+      </div>
+
     </body>
 </html>
