--- a/index.html
+++ b/index.html
@@ -74,38 +74,46 @@
           </div>
 
           <!-- section for contact -->
-          <section id="contact" class="container">
+          <section id="contact">
             <h1> Contact Me! </h1>
-            <div class="info row">
-              <div class="column-one col-6">
-                <div id="talkbubble" class="contact-info">
-                  <p>
-                    <img src="assets/img/email.png">
-                    <img src="assets/img/telephone.png">
-                    This is my contact info!
-                  </p>
-                </div>
-                <div class="art-portfolio">
-                  <h2> I also draw! </h2>
-                  <a href="#">
-                    <p> click here to view my art portfolio </p>
-                    <img class="arrow" src="assets/img/arrow.png">
-                    <img class="arrow" src="assets/img/creativity.png">
-                  </a>
-                </div>
-              </div>
+            <div class="container">
+              <div class="info row">
 
-              <div class="other-links col-6">
-                <div class="github">
-                  <a href="#"> GITHUB </a>
+                <!-- column one -->
+                <div class="contact-info">
+                  <div id="talkbubble">
+                    <p>
+                      <img src="assets/img/email.png">
+                      <img src="assets/img/telephone.png">
+                      This is my contact info!
+                    </p>
+                  </div>
+                  <div class="art-portfolio">
+                    <h2> I also draw! </h2>
+                    <a href="#">
+                      <p> click here to view my art portfolio </p>
+                      <img class="arrow" src="assets/img/arrow.png">
+                      <img class="arrow" src="assets/img/creativity.png">
+                    </a>
+                  </div>
                 </div>
-                <div class="linkedin">
-                  <a href="#"> LINKEDIN </a>
-                </div>
-              </div>
 
+                <!-- column two -->
+                <div class="other-links">
+                  <div class="github">
+                    <a href="#"> GITHUB </a>
+                  </div>
+                  <div class="linkedin">
+                    <a href="#"> LINKEDIN </a>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </section>
+
+          <!-- credits section -->
+
           <div class="credits">
             <p>Icons made by
               <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
