Transferred styling over to new temp

--- a/index.html
+++ b/index.html
@@ -9,6 +9,119 @@
       <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1> Portfolio Template </h1>
+      <div class="container wrapper col-12">
+        <!-- nav bar -->
+        <div class="row nav-bar">
+          <nav>
+            <a href="#about" class="toscroll">About</a>
+            <a href="#skills"
+            class="toscroll">Skills</a>
+            <a href="#projects" class="toscroll">Projects</a>
+            <a href="#contact" class="toscroll">Contact</a>
+          </nav>
+        </div>
+
+        <!-- header section -->
+        <header class="row align-items-center">
+          <h1> Britney Chen </h1>
+          <h2> BS Computer Science and Design, Software Engineer </h2>
+        </header>
+
+        <!-- wrapper for content -->
+        <div class="content-wrap">
+          <!-- All page content-->
+          <div class="content">
+            <div id="back-to-top">
+              <i class="arrow up"></i>
+            </div>
+            <!-- section for about -->
+            <section class="row" id="about">
+              <h2> About Me </h2>
+              <div class="profile-pic">
+                <img src="assets/img/profile.jpg">
+              </div>
+              <p>
+                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+              </p>
+            </section>
+
+            <!-- section for skills -->
+            <section class="row" id="skills">
+              <h2> Skills </h2>
+              <div class="languages">
+                <h3> Languages </h3>
+              </div>
+              <div class="frameworks">
+                <h3> Frameworks and Technologies </h3>
+              </div>
+            </section>
+
+            <!-- section for projects -->
+            <section class="row" id="projects">
+              <h2> Projects </h2>
+
+              <div class="dollary">
+              </div>
+
+              <div class="tictactoe">
+              </div>
+            </section>
+
+
+          </div>
+
+          <!-- section for contact -->
+          <section id="contact">
+            <h1> Contact Me! </h1>
+            <div class="container">
+              <div class="info row">
+
+                <!-- column one -->
+                <div class="contact-info">
+                  <div id="talkbubble">
+                    <p>
+                      <img src="assets/img/email.png">
+                      <img src="assets/img/telephone.png">
+                      This is my contact info!
+                    </p>
+                  </div>
+                  <div class="art-portfolio">
+                    <h2> I also draw! </h2>
+                    <a href="#">
+                      <p> click here to view my art portfolio </p>
+                      <img class="arrow" src="assets/img/arrow.png">
+                      <img class="arrow" src="assets/img/creativity.png">
+                    </a>
+                  </div>
+                </div>
+
+                <!-- column two -->
+                <div class="other-links">
+                  <div class="github">
+                    <a href="#"> GITHUB </a>
+                  </div>
+                  <div class="linkedin">
+                    <a href="#"> LINKEDIN </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </section>
+
+          <!-- credits section -->
+
+          <div class="credits">
+            <p>Icons made by
+              <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
+              <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>
+              from
+              <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a>
+              is licensed by
+              <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
