Added github and linked in
- Added images for github and linked in
- created hyperlinks for both
- added email and phone number

--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
                 <!-- column one -->
                 <div class="contact-info">
                   <div id="talkbubble">
-                    <p>
+                    <div class="talkbubble-info">
                       <img src="assets/img/email.png">
+                      <p> Email me at</p>
+                      <a href="mailto:chen.bri@husky.neu.edu">chen.bri@husky.neu.edu</a>
                       <img src="assets/img/telephone.png">
-                      This is my contact info!
-                    </p>
+                      <p> Call me at </p>
+                      <p>(909)-509-1668</p>
+                    </div>
                   </div>
                   <div class="art-portfolio">
                     <h2> I also draw! </h2>
@@ -98,10 +101,15 @@
                 <!-- column two -->
                 <div class="other-links">
                   <div class="github">
-                    <a href="#"> GITHUB </a>
+                    <img src="assets/img/github-logo.png">
+                    <a href="https://github.com/britneyart80" target="_blank">
+                    - MY GITHUB -</a> <br>
+                    <a href="https://github.com/britneyart80/britneyart80.github.io" target="_blank"> - THIS REPO - </a>
                   </div>
                   <div class="linkedin">
-                    <a href="#"> LINKEDIN </a>
+                    <a href="#">
+                    <img src="assets/img/linked-in-logo-of-two-letters.png">
+                    - LINKEDIN - </a>
                   </div>
                 </div>
 
@@ -114,11 +122,12 @@
           <div class="credits">
             <p>Icons made by
               <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
-              <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>
+              <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>,
+              <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
               from
-              <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a>
+              <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
               is licensed by
-              <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+              <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
             </p>
           </div>
         </div>
