--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div id="back-to-top">
               <i class="arrow up"></i>
             </div>
+            <p id="btt-text" style="font-size: .5rem;">Back to Top</p>
             <!-- section for about -->
             <section class="row" id="about">
               <h2> About Me </h2>
@@ -91,7 +92,7 @@
                   <div class="art-portfolio">
                     <h2> I also draw! </h2>
                     <a href="#">
-                      <p> click here to view my art portfolio </p>
+                      <p> click here to view my art portfolio (currently in progress)</p>
                       <img class="arrow" src="assets/img/arrow.png">
                       <img class="arrow" src="assets/img/creativity.png">
                     </a>
@@ -107,7 +108,7 @@
                     <a href="https://github.com/britneyart80/britneyart80.github.io" target="_blank"> - THIS REPO - </a>
                   </div>
                   <div class="linkedin">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/britney-chen-08/" target="_blank">
                     <img src="assets/img/linked-in-logo-of-two-letters.png">
                     - LINKEDIN - </a>
                   </div>
