--- a/index.html
+++ b/index.html
@@ -1,137 +1,176 @@
 <!DOCTYPE html>
-<html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
 
-      <link href="assets/styles/main.css" rel="stylesheet">
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <div class="container wrapper col-12">
-        <!-- nav bar -->
-        <div class="row nav-bar">
-          <nav>
-            <a href="#about" class="toscroll">About</a>
-            <a href="#skills"
-            class="toscroll">Skills</a>
-            <a href="#projects" class="toscroll">Projects</a>
-            <a href="#contact" class="toscroll">Contact</a>
-          </nav>
+<head>
+  <title>Britney Chen</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="assets/styles/main.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <div class="container wrapper col-12">
+    <!-- nav bar -->
+    <div class="nav-bar">
+      <nav>
+        <a href="#about" class="toscroll">About</a>
+        <a href="#skills" class="toscroll">Skills</a>
+        <a href="#projects" class="toscroll">Projects</a>
+        <a href="#contact" class="toscroll">Contact</a>
+      </nav>
+    </div>
+
+    <!-- header section -->
+    <header class="row align-items-center">
+      <h1> Britney Chen </h1>
+      <h2> BS Computer Science and Design, Software Engineer </h2>
+    </header>
+
+    <!-- wrapper for content -->
+    <div class="content-wrap">
+      <!-- All page content-->
+      <div class="content">
+        <div id="back-to-top">
+          <i class="arrow up"></i>
         </div>
-
-        <!-- header section -->
-        <header class="row align-items-center">
-          <h1> Britney Chen </h1>
-          <h2> BS Computer Science and Design, Software Engineer </h2>
-        </header>
-
-        <!-- wrapper for content -->
-        <div class="content-wrap">
-          <!-- All page content-->
-          <div class="content">
-            <div id="back-to-top">
-              <i class="arrow up"></i>
-            </div>
-            <p id="btt-text" style="font-size: .5rem;">Back to Top</p>
-            <!-- section for about -->
-            <section class="row" id="about">
-              <h2> About Me </h2>
-              <div class="profile-pic">
-                <img src="assets/img/profile.jpg">
-              </div>
-              <p>
-                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-              </p>
-            </section>
-
-            <!-- section for skills -->
-            <section class="row" id="skills">
-              <h2> Skills </h2>
-              <div class="languages">
-                <h3> Languages </h3>
-              </div>
-              <div class="frameworks">
-                <h3> Frameworks and Technologies </h3>
-              </div>
-            </section>
-
-            <!-- section for projects -->
-            <section class="row" id="projects">
-              <h2> Projects </h2>
-
-              <div class="dollary">
-              </div>
-
-              <div class="tictactoe">
-              </div>
-            </section>
-
-
+        <p id="btt-text" style="font-size: .5rem;">Back to Top</p>
+        <!-- section for about -->
+        <section class="row" id="about">
+          <h2> About Me </h2>
+          <div class="profile-pic">
+            <img src="assets/img/profile.jpg">
           </div>
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
+            autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+          </p>
+        </section>
 
-          <!-- section for contact -->
-          <section id="contact">
-            <h1> Contact Me! </h1>
-            <div class="container">
-              <div class="info row">
+        <!-- section for skills -->
+        <section class="row" id="skills">
+          <h2> Skills </h2>
+          <div class="languages">
+            <h3> Languages </h3>
+          </div>
+          <div class="frameworks">
+            <h3> Frameworks and Technologies </h3>
+          </div>
+        </section>
 
-                <!-- column one -->
-                <div class="contact-info">
-                  <div id="talkbubble">
-                    <div class="talkbubble-info">
-                      <img src="assets/img/email.png">
-                      <p> Email me at</p>
-                      <a href="mailto:chen.bri@husky.neu.edu">chen.bri@husky.neu.edu</a>
-                      <img src="assets/img/telephone.png">
-                      <p> Call me at </p>
-                      <p>(909)-509-1668</p>
+        <!-- section for projects -->
+        <section class="row" id="projects">
+          <div class="projects">
+            <h2> Projects </h2>
+
+            <div class="dollary">
+              <img src="assets/img/dollary.png">
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                Launch demo modal
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      ...
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                   </div>
-                  <div class="art-portfolio">
-                    <h2> I also draw! </h2>
-                    <a href="#">
-                      <p> click here to view my art portfolio (currently in progress)</p>
-                      <img class="arrow" src="assets/img/arrow.png">
-                      <img class="arrow" src="assets/img/creativity.png">
-                    </a>
-                  </div>
                 </div>
-
-                <!-- column two -->
-                <div class="other-links">
-                  <div class="github">
-                    <img src="assets/img/github-logo.png">
-                    <a href="https://github.com/britneyart80" target="_blank">
-                    - MY GITHUB -</a> <br>
-                    <a href="https://github.com/britneyart80/britneyart80.github.io" target="_blank"> - THIS REPO - </a>
-                  </div>
-                  <div class="linkedin">
-                    <a href="https://www.linkedin.com/in/britney-chen-08/" target="_blank">
-                    <img src="assets/img/linked-in-logo-of-two-letters.png">
-                    - LINKEDIN - </a>
-                  </div>
-                </div>
-
               </div>
             </div>
-          </section>
 
-          <!-- credits section -->
+            <div class="tictactoe">
+              <img src="assets/img/tic-tac-toe.png">
+            </div>
+          </div>
+        </section>
 
-          <div class="credits">
-            <p>Icons made by
-              <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
-              <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>,
-              <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
-              from
-              <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-              is licensed by
-              <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-            </p>
+
+      </div>
+
+      <!-- section for contact -->
+      <section id="contact">
+        <h1> Contact Me! </h1>
+        <div class="container">
+          <div class="info row">
+
+            <!-- column one -->
+            <div class="contact-info">
+              <div id="talkbubble">
+                <div class="talkbubble-info">
+                  <img src="assets/img/email.png">
+                  <p> Email me at</p>
+                  <a href="mailto:chen.bri@husky.neu.edu">chen.bri@husky.neu.edu</a>
+                  <img src="assets/img/telephone.png">
+                  <p> Call me at </p>
+                  <p>(909)-509-1668</p>
+                </div>
+              </div>
+              <div class="art-portfolio">
+                <h2> I also draw! </h2>
+                <a href="#">
+                  <p> click here to view my art portfolio (currently in progress)</p>
+                  <img class="arrow" src="assets/img/arrow.png">
+                  <img class="arrow" src="assets/img/creativity.png">
+                </a>
+              </div>
+            </div>
+
+            <!-- column two -->
+            <div class="other-links">
+              <div class="github">
+                <img src="assets/img/github-logo.png">
+                <a href="https://github.com/britneyart80" target="_blank">
+                  - MY GITHUB -</a> <br>
+                <a href="https://github.com/britneyart80/britneyart80.github.io" target="_blank"> - THIS REPO - </a>
+              </div>
+              <div class="linkedin">
+                <a href="https://www.linkedin.com/in/britney-chen-08/" target="_blank">
+                  <img src="assets/img/linked-in-logo-of-two-letters.png">
+                  - LINKEDIN - </a>
+              </div>
+            </div>
+
           </div>
         </div>
+      </section>
+
+      <!-- credits section -->
+
+      <div class="credits">
+        <p>Icons made by
+          <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
+          <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>,
+          <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+          from
+          <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+          is licensed by
+          <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+        </p>
       </div>
-    </body>
+    </div>
+  </div>
+</body>
+
 </html>
