--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="container wrapper col-12">
     <!-- nav bar -->
     <div class="row nav-bar">
-      <div class="col col-12">
-        <nav>
+      <div class="col-12">
+        <nav style="margin-right: -15px;">
           <a href="#about" class="toscroll">About</a>
           <a href="#skills" class="toscroll">Skills</a>
           <a href="#projects" class="toscroll">Projects</a>
