--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container wrapper col-12">
     <!-- nav bar -->
     <div class="row nav-bar">
-      <div class="col-12">
+      <div class="col-12" style="padding-left: 0;">
         <nav style="margin-right: -15px;">
           <a href="#about" class="toscroll">About</a>
           <a href="#skills" class="toscroll">Skills</a>
