--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
               <i class="devicon-bootstrap-plain colored" name="Bootstrap"><p></p></i>
               <i class="devicon-jquery-plain colored" name="jQuery"><p></p></i>
               <i class="devicon-sass-original colored" name="Sass"><p></p></i>
-              <i class="devicon-rails-plain colored" name="Rails"><p></p></i>
               <i class="devicon-react-original colored" name="React"><p></p></i>
+              <i class="devicon-rails-plain colored" name="Rails"><p></p></i>
               <i class="devicon-express-original colored" name="Express"><p></p></i>
+              <i class="devicon-amazonwebservices-plain-wordmark colored" name="AWS"><p></p></i>
               <i class="devicon-mongodb-plain colored" name="MongoDB"><p></p></i>
+              <i class="devicon-postgresql-plain colored" name="PostgreSQL"><p></p></i>
             </div>
           </div>
         </section>
@@ -99,25 +101,19 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="portfolioModalLongTitle">My Portfolio</h5>
+                      <h4 class="modal-title" id="portfolioModalLongTitle">My Portfolio</h4>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
                     <div class="modal-body">
                       <p>
-                        I wanted to create my own personal space online where I could document my projects as well as practice my web-page development skills.
-                      </p>
+                        This project was a way for me to practice web design skills as well as a way for me to document my work on a platform that's easy to share!</p>
                       <p>
-                        Technologies used:
+                        I made this portfolio template-free and used bootstrap, html and css to style and layout the webpage. With bootstrap's flex features, the portfolio is also mobile-friendly.
+                        The interactive elements on the page are handled using Javascript and jQuery.
                       </p>
-                      <ul class="technologies">
-                        <li>JavaScript</li>
-                        <li>jQuery</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap</li>
-                      </ul>
+                      <p> This portfolio is still under development and I plan to keep adding to it as I expand my skill set and complete more projects, but I hope you enjoy perusing what's here so far! </p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
@@ -183,7 +179,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="dollaryModalLongTitle">Dollary</h5>
+                      <h4 class="modal-title" id="dollaryModalLongTitle">Dollary</h4>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
@@ -227,7 +223,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="tttModalLongTitle">Tic-Tac-Toe</h5>
+                      <h4 class="modal-title" id="tttModalLongTitle">Tic-Tac-Toe</h4>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
